--- a/templates/index.twig
+++ b/templates/index.twig
@@ -1,47 +1,5 @@
-<!DOCTYPE html><!-- This site was created in Webflow. https://www.webflow.com -->
-<!-- Last Published: Thu Aug 18 2022 10:09:58 GMT+0000 (Coordinated Universal Time) -->
-<html data-wf-page="625295532800cf7ed68d3dd3" data-wf-site="625295532800cfe2dd8d3dd2">
-
-<head>
-    <meta charset="utf-8" />
-    <title>Site Consult</title>
-    <meta content="Site Consult" property="og:title" />
-    <meta
-        content="https://assets.website-files.com/625295532800cfe2dd8d3dd2/6268215325d0a3d07cd928db_silber-og-image.png"
-        property="og:image" />
-    <meta content="Home 2 | Construction &amp; Renovation Webflow Template" property="twitter:title" />
-    <meta
-        content="https://assets.website-files.com/625295532800cfe2dd8d3dd2/6268215325d0a3d07cd928db_silber-og-image.png"
-        property="twitter:image" />
-    <meta content="width=device-width, initial-scale=1" name="viewport" />
-    <meta content="Webflow" name="generator" />
-    <link href="{{siteUrl}}style.css" rel="stylesheet" type="text/css" />
-    <style>
-        @media (min-width:992px) {
-            html.w-mod-js:not(.w-mod-ix) [data-w-id="25948a56-9020-051b-6f8e-553087890c34"] {
-                -webkit-transform: translate3d(-101%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
-                -moz-transform: translate3d(-101%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
-                -ms-transform: translate3d(-101%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
-                transform: translate3d(-101%, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
-                display: block;
-            }
-
-            html.w-mod-js:not(.w-mod-ix) [data-w-id="1123e7cd-6058-a9e7-30f6-f4c03a293e8e"] {
-                -webkit-transform: translate3d(-1em, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
-                -moz-transform: translate3d(-1em, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
-                -ms-transform: translate3d(-1em, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
-                transform: translate3d(-1em, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);
-                opacity: 0;
-            }
-        }
-    </style>
-    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
-    <script
-        type="text/javascript">WebFont.load({ google: { families: ["Barlow:100,200,300,regular,italic,500,600,700,800:latin,latin-ext"] } });</script>
-
-
-</head>
-
+{% extends "layout/main.twig" %}
+{% block content%}
 <body>
     <div class="preloader">
         <div class="preloader-inner">
@@ -845,5 +803,4 @@
 
 
 </body>
-
-</html>
+{% endblock %}
