--- a/templates/layout/main.twig
+++ b/templates/layout/main.twig
@@ -3,6 +3,6 @@
     {% include 'includes/_nav.twig' %}
 
 {% block content %}{% endblock %}
-
+   {% include 'includes/_footer.twig' %}
 
 {% endblock %}
