--- a/templates/about.twig
+++ b/templates/about.twig
@@ -224,7 +224,7 @@
                             <h3 data-w-id="6d675344-39d4-6367-c314-d97b69cc78d4" class="heading is-cta-title-1">
                                 Reach out today and start this amazing journey with us
                             </h3>
-                            <div class="button-overlap-1"><a href="/contact-1" class="main-button w-inline-block">
+                            <div class="button-overlap-1"><a href="/contact" class="main-button w-inline-block">
                                     <div class="button-inner">
                                         <p class="button-title">Inquiry</p><img
                                             src="https://assets.website-files.com/625295532800cfe2dd8d3dd2/6252f1730653975c82d4a73c_east_white_24dp.svg"
@@ -253,7 +253,7 @@
             </section>
             <!--missions -->
 
-            <section class="section is-form-section wf-section">
+            {# <section class="section is-form-section wf-section">
                 <div class="container">
                     <div class="padding-inner">
                         <div class="form-grid">
@@ -348,7 +348,7 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            </section> #}
         </main>
     </div>
      <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=625295532800cfe2dd8d3dd2"
