--- a/web/style.css
+++ b/web/style.css
@@ -2768,7 +2768,7 @@ blockquote {
     width: 100%;
     height: 100%;
     border-radius: 15px;
-    background-color: #053eca
+    background-color: #02C879
 }
 
 .custom-list-1 {
